Bug 523915 - updater crashes when trying to update with crash reporter open. r=ted.mielczarek